feat: Config cors and schedule to filter the top five power stations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=PowerStation
 spring.datasource.url=jdbc:postgresql://localhost:5432/station
 spring.datasource.username=postgres
 spring.datasource.password=123456
+cors.allowed.origin=http://localhost:5173
